# packages

./: AGENT.md  Cargo.toml  README.md  deny.toml  flake.nix  index.html  rustfmt.toml  sign_all.sh
.github/workflows/: ci.yml  import-release.yml  pages.yml
apt/: MAINTAINER.md  README.md  crateria-keyring.gpg  crateria.list  index.html  install.sh  ubermetroid-key.gpg  ubermetroid.list  update.rs
apt/dists/stable/: InRelease  Release  Release.gpg
metapackages/idle-cosmic/: control
rpm/: README.md  crateria-key.gpg  crateria.repo  ubermetroid.repo
rpm/pool/: idle-saver-chaos-2.0.2-1.x86_64.rpm  idle-saver-gnats-2.0.2-1.x86_64.rpm  idle-saver-radar-2.0.2-1.x86_64.rpm  idle-saver-ripple-2.0.2-1.x86_64.rpm  idle-saver-storm-2.0.2-1.x86_64.rpm  idlescreen-2.0.0-1.x86_64.rpm  idlescreen-cli-2.0.0-1.x86_64.rpm  idlescreen-savers-2.0.0-1.x86_64.rpm  saver-beams-2.0.0-1.x86_64.rpm  saver-bursts-2.0.0-1.x86_64.rpm  saver-cosmos-2.0.0-1.x86_64.rpm  saver-gnats-2.0.0-1.x86_64.rpm  saver-hearth-2.0.0-1.x86_64.rpm  saver-radar-2.0.0-1.x86_64.rpm
rpm/repodata/: 0b6a7959b568a6d5563ed0e3c079b5d261e661ce3fea391ba5d90cc128c9b6ad-filelists.xml.zst  0df0c2091fa1d1c6392b3c3ad82965a704a8687597a4f291851941e6e382b611-other.sqlite.bz2  0eda82dbd58358db4a86c4439588b85ebeee56a65507c304362f424ec51d5d5f-primary.sqlite.bz2  (+141 more)
src/: lib.rs  package_parse.rs  paths.rs  prune.rs  prune_core.rs  sign.rs  sign_macros.rs  sweep.rs  update.rs  version_cmp.rs
tests/: package_parse_proptest.rs  path_safety_proptest.rs  prune_proptest.rs  sign_macros_proptest.rs  version_proptest.rs
(+9 files in other folders)
